--- a/index.html
+++ b/index.html
@@ -24,164 +24,181 @@
   </head>
   <body>
     <header class="header">
-      <nav class="header-nav">
-        <a class="logo link" href="./index.html"><span class="web">Web</span>Studio</a>
+      <div class="container header-container">
+        <nav class="header-nav">
+          <a class="logo link" href="./index.html"><span class="web">Web</span>Studio</a>
 
-        <ul class="header-list list">
-          <li class="header-item">
-            <a class="header-link link header-link-current" href="./index.html">Студия</a>
+          <ul class="header-list list">
+            <li class="header-item">
+              <a class="header-link link header-link-current" href="./index.html">Студия</a>
+            </li>
+            <li class="header-item">
+              <a class="header-link link" href="./portfolio.html">Портфолио</a>
+            </li>
+            <li class="header-item">
+              <a class="header-link link" href="/">Контакты</a>
+            </li>
+          </ul>
+        </nav>
+
+        <ul class="contacts list">
+          <li class="contacts-item">
+            <a class="contacts-mail link" href="mailto:info@devstudio.com">info@devstudio.com</a>
           </li>
-          <li class="header-item">
-            <a class="header-link link" href="./portfolio.html">Портфолио</a>
-          </li>
-          <li class="header-item">
-            <a class="header-link link" href="/">Контакты</a>
+          <li class="contacts-item">
+            <a class="contacts-phone link" href="tel:+380961111111">+38 096 111 11 11</a>
           </li>
         </ul>
-      </nav>
-
-      <ul class="contacts list">
-        <li class="contacts-item">
-          <a class="contacts-mail link" href="mailto:info@devstudio.com">info@devstudio.com</a>
-        </li>
-        <li class="contacts-item">
-          <a class="contacts-phone link" href="tel:+380961111111">+38 096 111 11 11</a>
-        </li>
-      </ul>
+      </div>
     </header>
 
     <main>
       <section class="hero-section">
-        <h1 class="hero-title">Эффективные решения для вашего бизнеса</h1>
-        <button class="hero-btn btn" type="button">Заказать услугу</button>
+        <div class="container">
+          <h1 class="hero-title">Эффективные решения для вашего бизнеса</h1>
+          <button class="hero-btn btn" type="button">Заказать услугу</button>
+        </div>
       </section>
 
       <section class="feature">
-        <!-- Скрытый заголовок-->
-        <h2 class="visually-hidden">Особенности</h2>
-        <ul class="feature-list list">
-          <li class="feature-item">
-            <h3 class="feature-title link">Внимание к деталям</h3>
-            <p class="feature-descr">
-              Идейные соображения, а также начало повседневной работы по формированию позиции.
-            </p>
-          </li>
-          <li class="feature-item">
-            <h3 class="feature-title link">Пунктуальность</h3>
-            <p class="feature-descr">
-              Задача организации, в особенности же рамки и место обучения кадров влечет за собой.
-            </p>
-          </li>
-          <li class="feature-item">
-            <h3 class="feature-title link">Планирование</h3>
-            <p class="feature-descr">
-              Равным образом консультация с широким активом в значительной степени обуславливает.
-            </p>
-          </li>
-          <li class="feature-item">
-            <h3 class="feature-title link">Современные технологии</h3>
-            <p class="feature-descr">
-              Значимость этих проблем настолько очевидна, что реализация плановых заданий.
-            </p>
-          </li>
-        </ul>
+        <div class="container">
+          <!-- Скрытый заголовок-->
+          <h2 class="visually-hidden">Особенности</h2>
+          <ul class="feature-list list">
+            <li class="feature-item">
+              <h3 class="feature-title link">Внимание к деталям</h3>
+              <p class="feature-descr">
+                Идейные соображения, а также начало повседневной работы по формированию позиции.
+              </p>
+            </li>
+            <li class="feature-item">
+              <h3 class="feature-title link">Пунктуальность</h3>
+              <p class="feature-descr">
+                Задача организации, в особенности же рамки и место обучения кадров влечет за собой.
+              </p>
+            </li>
+            <li class="feature-item">
+              <h3 class="feature-title link">Планирование</h3>
+              <p class="feature-descr">
+                Равным образом консультация с широким активом в значительной степени обуславливает.
+              </p>
+            </li>
+            <li class="feature-item">
+              <h3 class="feature-title link">Современные технологии</h3>
+              <p class="feature-descr">
+                Значимость этих проблем настолько очевидна, что реализация плановых заданий.
+              </p>
+            </li>
+          </ul>
+        </div>
       </section>
 
       <section class="info">
-        <h2 class="info-title title">Чем мы занимаемся</h2>
+        <div class="container">
+          <h2 class="info-title title">Чем мы занимаемся</h2>
 
-        <ul class="info-list list">
-          <li class="info-item">
-            <img src="./images/about/box1.jpg" alt="верстка проекта" width="370" class="img link" />
-          </li>
-          <li class="info-item">
-            <img
-              src="./images/about/box2.jpg"
-              alt="дизайн странички на телефоне"
-              width="370"
-              class="img link"
-            />
-          </li>
-          <li class="info-item">
-            <img
-              src="./images/about/box3.jpg"
-              alt="диаграмма цветовой гаммы"
-              width="370"
-              class="img link"
-            />
-          </li>
-        </ul>
+          <ul class="info-list list">
+            <li class="info-item">
+              <img
+                src="./images/about/box1.jpg"
+                alt="верстка проекта"
+                width="370"
+                class="img link"
+              />
+            </li>
+            <li class="info-item">
+              <img
+                src="./images/about/box2.jpg"
+                alt="дизайн странички на телефоне"
+                width="370"
+                class="img link"
+              />
+            </li>
+            <li class="info-item">
+              <img
+                src="./images/about/box3.jpg"
+                alt="диаграмма цветовой гаммы"
+                width="370"
+                class="img link"
+              />
+            </li>
+          </ul>
+        </div>
       </section>
 
       <section class="team">
-        <h2 class="team-title title">Наша команда</h2>
-        <ul class="team-list list">
-          <li class="team-item">
-            <img
-              src="./images/team/imgigor.jpg"
-              alt="Игорь Демьяненко дизайнер"
-              width="270"
-              class="avatar link"
-            />
-            <h3 class="team-subtitle">Игорь Демьяненко</h3>
-            <p class="team-descr" lang="en">Product Designer</p>
-          </li>
-          <li class="team-item">
-            <img
-              src="./images/team/img.jpg"
-              alt="Ольга Репина фронтенд разработчик"
-              width="270"
-              class="avatar link"
-            />
-            <h3 class="team-subtitle">Ольга Репина</h3>
-            <p class="team-descr" lang="en">Frontend Developer</p>
-          </li>
-          <li class="team-item">
-            <img
-              src="./images/team/imgnikolas.jpg"
-              alt="Николай Тарасов маркетолог"
-              width="270"
-              class="avatar link"
-            />
-            <h3 class="team-subtitle">Николай Тарасов</h3>
-            <p class="team-descr" lang="en">Marketing</p>
-          </li>
-          <li class="team-item">
-            <img
-              src="./images/team/imgmihail.jpg"
-              alt="Михаил Ермаков UI-дизайнер"
-              width="270"
-              class="avatar link"
-            />
-            <h3 class="team-subtitle">Михаил Ермаков</h3>
-            <p class="team-descr" lang="en">UI Designer</p>
-          </li>
-        </ul>
+        <div class="container">
+          <h2 class="team-title title">Наша команда</h2>
+          <ul class="team-list list">
+            <li class="team-item">
+              <img
+                src="./images/team/imgigor.jpg"
+                alt="Игорь Демьяненко дизайнер"
+                width="270"
+                class="avatar link"
+              />
+              <h3 class="team-subtitle">Игорь Демьяненко</h3>
+              <p class="team-descr" lang="en">Product Designer</p>
+            </li>
+            <li class="team-item">
+              <img
+                src="./images/team/img.jpg"
+                alt="Ольга Репина фронтенд разработчик"
+                width="270"
+                class="avatar link"
+              />
+              <h3 class="team-subtitle">Ольга Репина</h3>
+              <p class="team-descr" lang="en">Frontend Developer</p>
+            </li>
+            <li class="team-item">
+              <img
+                src="./images/team/imgnikolas.jpg"
+                alt="Николай Тарасов маркетолог"
+                width="270"
+                class="avatar link"
+              />
+              <h3 class="team-subtitle">Николай Тарасов</h3>
+              <p class="team-descr" lang="en">Marketing</p>
+            </li>
+            <li class="team-item">
+              <img
+                src="./images/team/imgmihail.jpg"
+                alt="Михаил Ермаков UI-дизайнер"
+                width="270"
+                class="avatar link"
+              />
+              <h3 class="team-subtitle">Михаил Ермаков</h3>
+              <p class="team-descr" lang="en">UI Designer</p>
+            </li>
+          </ul>
+        </div>
       </section>
     </main>
 
     <footer class="footer">
-      <a class="footer-logo link" href="./index.html"><span class="web">Web</span>Studio</a>
+      <div class="container">
+        <a class="footer-logo link" href="./index.html"><span class="web">Web</span>Studio</a>
 
-      <address class="footer-address">
-        <ul class="footer-list list">
-          <li class="footer-item">
-            <a
-              class="footer-link link foot"
-              href="http://www.google.com/maps/place"
-              target="_blank"
-              rel="noopener noreferre"
-              >г. Киев, пр-т Леси Украинки, 26</a
-            >
-          </li>
-          <li class="footer-item">
-            <a class="footer-mail link foot" href="mailto:info@example.com">info@example.com</a>
-          </li>
-          <li class="footer-item">
-            <a class="footer-phone link foot" href="tel:+380991111111">+38 099 111 11 11</a>
-          </li>
-        </ul>
-      </address>
+        <address class="footer-address">
+          <ul class="footer-list list">
+            <li class="footer-item">
+              <a
+                class="footer-link link foot"
+                href="http://www.google.com/maps/place"
+                target="_blank"
+                rel="noopener noreferre"
+                >г. Киев, пр-т Леси Украинки, 26</a
+              >
+            </li>
+            <li class="footer-item">
+              <a class="footer-mail link foot" href="mailto:info@example.com">info@example.com</a>
+            </li>
+            <li class="footer-item">
+              <a class="footer-phone link foot" href="tel:+380991111111">+38 099 111 11 11</a>
+            </li>
+          </ul>
+        </address>
+      </div>
     </footer>
   </body>
 </html>
