--- a/portfolio.html
+++ b/portfolio.html
@@ -24,198 +24,204 @@
   </head>
   <body>
     <header class="header">
-      <nav class="header-nav">
-        <a class="logo link" href="./index.html"><span class="web">Web</span>Studio</a>
+      <div class="container header-container">
+        <nav class="header-nav">
+          <a class="logo link" href="./index.html"><span class="web">Web</span>Studio</a>
 
-        <ul class="header-list list">
-          <li class="header-item">
-            <a class="header-link link" href="./index.html">Студия</a>
+          <ul class="header-list list">
+            <li class="header-item">
+              <a class="header-link link" href="./index.html">Студия</a>
+            </li>
+            <li class="header-item">
+              <a class="header-link link header-link-current" href="./portfolio.html">Портфолио</a>
+            </li>
+            <li class="header-item">
+              <a class="header-link link" href="/">Контакты</a>
+            </li>
+          </ul>
+        </nav>
+
+        <ul class="contacts list">
+          <li class="contacts-item">
+            <a class="contacts-mail link" href="mailto:info@devstudio.com">info@devstudio.com</a>
           </li>
-          <li class="header-item">
-            <a class="header-link link header-link-current" href="./portfolio.html">Портфолио</a>
-          </li>
-          <li class="header-item">
-            <a class="header-link link" href="/">Контакты</a>
+          <li class="contacts-item">
+            <a class="contacts-phone link" href="tel:+380961111111">+38 096 111 11 11</a>
           </li>
         </ul>
-      </nav>
-
-      <ul class="contacts list">
-        <li class="contacts-item">
-          <a class="contacts-mail link" href="mailto:info@devstudio.com">info@devstudio.com</a>
-        </li>
-        <li class="contacts-item">
-          <a class="contacts-phone link" href="tel:+380961111111">+38 096 111 11 11</a>
-        </li>
-      </ul>
+      </div>
     </header>
 
     <main>
       <section class="project">
-        <!--Скрытый заголовок-->
-        <h1 class="visually-hidden">Проекты</h1>
-        <ul class="filters-list list">
-          <li class="filters-item">
-            <button type="button" class="filters-btn btn list filters-btn-current">Все</button>
-          </li>
-          <li class="filters-item">
-            <button type="button" class="filters-btn btn list">Веб-сайты</button>
-          </li>
-          <li class="filters-item">
-            <button type="button" class="filters-btn btn list">Приложения</button>
-          </li>
-          <li class="filters-item">
-            <button type="button" class="filters-btn btn list">Дизайн</button>
-          </li>
-          <li class="filters-item">
-            <button type="button" class="filters-btn btn list">Маркетинг</button>
-          </li>
-        </ul>
+        <div class="container">
+          <!--Скрытый заголовок-->
+          <h1 class="visually-hidden">Проекты</h1>
+          <ul class="filters-list list">
+            <li class="filters-item">
+              <button type="button" class="filters-btn btn list filters-btn-current">Все</button>
+            </li>
+            <li class="filters-item">
+              <button type="button" class="filters-btn btn list">Веб-сайты</button>
+            </li>
+            <li class="filters-item">
+              <button type="button" class="filters-btn btn list">Приложения</button>
+            </li>
+            <li class="filters-item">
+              <button type="button" class="filters-btn btn list">Дизайн</button>
+            </li>
+            <li class="filters-item">
+              <button type="button" class="filters-btn btn list">Маркетинг</button>
+            </li>
+          </ul>
 
-        <ul class="product-list list">
-          <li class="product-item">
-            <a href="./portfolio.html" class="link">
-              <img
-                src="./images/portfolio/imgtechnokryak.jpg"
-                alt="три фото людей с команды на сайте"
-                width="370"
-                height="294"
-                class="img"
-              />
-              <h2 class="product-title">Технокряк</h2>
-              <p class="product-descr">Веб-сайт</p></a
-            >
-          </li>
-          <li class="product-item">
-            <a href="./portfolio.html" class="link"
-              ><img
-                src="./images/portfolio/imgposter.jpg"
-                alt="два баскетболиста с мячом"
-                width="370"
-                height="294"
-                class="img"
-              />
-              <h2 class="product-title" lang="en">Постер New Orlean vs Golden Star</h2>
-              <p class="product-descr">Дизайн</p></a
-            >
-          </li>
-          <li class="product-item">
-            <a href="./portfolio.html" class="link">
-              <img
-                src="./images/portfolio/imgrestaurant.jpg"
-                alt="название ресторана Seafood"
-                width="370"
-                height="294"
-                class="img"
-              />
-              <h2 class="product-title" lang="en">Ресторан Seafood</h2>
-              <p class="product-descr">Приложение</p></a
-            >
-          </li>
-          <li class="product-item">
-            <a href="./portfolio.html" class="link"
-              ><img
-                src="./images/portfolio/imgprime.jpg"
-                alt="наушники"
-                width="370"
-                height="294"
-                class="img"
-              />
-              <h2 class="product-title" lang="en">Проект Prime</h2>
-              <p class="product-descr">Маркетинг</p></a
-            >
-          </li>
-          <li class="product-item">
-            <a href="./portfolio.html" class="link"
-              ><img
-                src="./images/portfolio/imgboxes.jpg"
-                alt="две коробки"
-                width="370"
-                height="294"
-                class="img"
-              />
-              <h2 class="product-title" lang="en">Проект Boxes</h2>
-              <p class="product-descr">Приложение</p></a
-            >
-          </li>
-          <li class="product-item">
-            <a href="./portfolio.html" class="link">
-              <img
-                src="./images/portfolio/imgborders.jpg"
-                alt="интернет-страница на мониторе"
-                width="370"
-                height="294"
-                class="img"
-              />
-              <h2 class="product-title" lang="en">Inspiration has no Borders</h2>
-              <p class="product-descr">Веб-сайт</p></a
-            >
-          </li>
-          <li class="product-item">
-            <a href="./portfolio.html" class="link">
-              <img
-                src="./images/portfolio/imglimited.jpg"
-                alt="журнал в котором две статьи и три фотографии"
-                width="370"
-                height="294"
-                class="img"
-              />
-              <h2 class="product-title" lang="en">Издание Limited Edition</h2>
-              <p class="product-descr">Дизайн</p></a
-            >
-          </li>
-          <li class="product-item">
-            <a href="./portfolio.html" class="link"
-              ><img
-                src="./images/portfolio/imglab.jpg"
-                alt="бирка с надписью lab el tag"
-                width="370"
-                height="294"
-                class="img"
-              />
-              <h2 class="product-title" lang="en">Проект LAB</h2>
-              <p class="product-descr">Маркетинг</p></a
-            >
-          </li>
-          <li class="product-item">
-            <a href="./portfolio.html" class="link"
-              ><img
-                src="./images/portfolio/imgbusiness.jpg"
-                alt="руки на клавиатуре ноутбука с открытой веб-страницей"
-                width="370"
-                height="294"
-                class="img"
-              />
-              <h2 class="product-title" lang="en">Growing Business</h2>
-              <p class="product-descr">Приложение</p></a
-            >
-          </li>
-        </ul>
+          <ul class="product-list list">
+            <li class="product-item">
+              <a href="./portfolio.html" class="link">
+                <img
+                  src="./images/portfolio/imgtechnokryak.jpg"
+                  alt="три фото людей с команды на сайте"
+                  width="370"
+                  height="294"
+                  class="img"
+                />
+                <h2 class="product-title">Технокряк</h2>
+                <p class="product-descr">Веб-сайт</p></a
+              >
+            </li>
+            <li class="product-item">
+              <a href="./portfolio.html" class="link"
+                ><img
+                  src="./images/portfolio/imgposter.jpg"
+                  alt="два баскетболиста с мячом"
+                  width="370"
+                  height="294"
+                  class="img"
+                />
+                <h2 class="product-title" lang="en">Постер New Orlean vs Golden Star</h2>
+                <p class="product-descr">Дизайн</p></a
+              >
+            </li>
+            <li class="product-item">
+              <a href="./portfolio.html" class="link">
+                <img
+                  src="./images/portfolio/imgrestaurant.jpg"
+                  alt="название ресторана Seafood"
+                  width="370"
+                  height="294"
+                  class="img"
+                />
+                <h2 class="product-title" lang="en">Ресторан Seafood</h2>
+                <p class="product-descr">Приложение</p></a
+              >
+            </li>
+            <li class="product-item">
+              <a href="./portfolio.html" class="link"
+                ><img
+                  src="./images/portfolio/imgprime.jpg"
+                  alt="наушники"
+                  width="370"
+                  height="294"
+                  class="img"
+                />
+                <h2 class="product-title" lang="en">Проект Prime</h2>
+                <p class="product-descr">Маркетинг</p></a
+              >
+            </li>
+            <li class="product-item">
+              <a href="./portfolio.html" class="link"
+                ><img
+                  src="./images/portfolio/imgboxes.jpg"
+                  alt="две коробки"
+                  width="370"
+                  height="294"
+                  class="img"
+                />
+                <h2 class="product-title" lang="en">Проект Boxes</h2>
+                <p class="product-descr">Приложение</p></a
+              >
+            </li>
+            <li class="product-item">
+              <a href="./portfolio.html" class="link">
+                <img
+                  src="./images/portfolio/imgborders.jpg"
+                  alt="интернет-страница на мониторе"
+                  width="370"
+                  height="294"
+                  class="img"
+                />
+                <h2 class="product-title" lang="en">Inspiration has no Borders</h2>
+                <p class="product-descr">Веб-сайт</p></a
+              >
+            </li>
+            <li class="product-item">
+              <a href="./portfolio.html" class="link">
+                <img
+                  src="./images/portfolio/imglimited.jpg"
+                  alt="журнал в котором две статьи и три фотографии"
+                  width="370"
+                  height="294"
+                  class="img"
+                />
+                <h2 class="product-title" lang="en">Издание Limited Edition</h2>
+                <p class="product-descr">Дизайн</p></a
+              >
+            </li>
+            <li class="product-item">
+              <a href="./portfolio.html" class="link"
+                ><img
+                  src="./images/portfolio/imglab.jpg"
+                  alt="бирка с надписью lab el tag"
+                  width="370"
+                  height="294"
+                  class="img"
+                />
+                <h2 class="product-title" lang="en">Проект LAB</h2>
+                <p class="product-descr">Маркетинг</p></a
+              >
+            </li>
+            <li class="product-item">
+              <a href="./portfolio.html" class="link"
+                ><img
+                  src="./images/portfolio/imgbusiness.jpg"
+                  alt="руки на клавиатуре ноутбука с открытой веб-страницей"
+                  width="370"
+                  height="294"
+                  class="img"
+                />
+                <h2 class="product-title" lang="en">Growing Business</h2>
+                <p class="product-descr">Приложение</p></a
+              >
+            </li>
+          </ul>
+        </div>
       </section>
     </main>
 
     <footer class="footer">
-      <a class="footer-logo link" href="./index.html"><span class="web">Web</span>Studio</a>
+      <div class="container">
+        <a class="footer-logo link" href="./index.html"><span class="web">Web</span>Studio</a>
 
-      <address class="footer-address">
-        <ul class="footer-list list">
-          <li class="footer-item">
-            <a
-              class="footer-link link foot"
-              href="http://www.google.com/maps/place"
-              target="_blank"
-              rel="noopener noreferre"
-              >г. Киев, пр-т Леси Украинки, 26</a
-            >
-          </li>
-          <li class="footer-item">
-            <a class="footer-mail link foot" href="mailto:info@example.com">info@example.com</a>
-          </li>
-          <li class="footer-item">
-            <a class="footer-phone link foot" href="tel:+380991111111">+38 099 111 11 11</a>
-          </li>
-        </ul>
-      </address>
+        <address class="footer-address">
+          <ul class="footer-list list">
+            <li class="footer-item">
+              <a
+                class="footer-link link foot"
+                href="http://www.google.com/maps/place"
+                target="_blank"
+                rel="noopener noreferre"
+                >г. Киев, пр-т Леси Украинки, 26</a
+              >
+            </li>
+            <li class="footer-item">
+              <a class="footer-mail link foot" href="mailto:info@example.com">info@example.com</a>
+            </li>
+            <li class="footer-item">
+              <a class="footer-phone link foot" href="tel:+380991111111">+38 099 111 11 11</a>
+            </li>
+          </ul>
+        </address>
+      </div>
     </footer>
   </body>
 </html>
