--- a/index.html
+++ b/index.html
@@ -54,121 +54,135 @@
 
     <main>
       <section class="hero-section">
-        <div class="container">
+        <div class="container hero-container">
           <h1 class="hero-title">Эффективные решения для вашего бизнеса</h1>
           <button class="hero-btn btn" type="button">Заказать услугу</button>
         </div>
       </section>
 
-      <section class="feature">
-        <div class="container">
+      <section class="feature section">
+        <div class="container feature-container">
           <!-- Скрытый заголовок-->
           <h2 class="visually-hidden">Особенности</h2>
           <ul class="feature-list list">
-            <li class="feature-item">
-              <h3 class="feature-title link">Внимание к деталям</h3>
-              <p class="feature-descr">
-                Идейные соображения, а также начало повседневной работы по формированию позиции.
-              </p>
-            </li>
-            <li class="feature-item">
-              <h3 class="feature-title link">Пунктуальность</h3>
-              <p class="feature-descr">
-                Задача организации, в особенности же рамки и место обучения кадров влечет за собой.
-              </p>
-            </li>
-            <li class="feature-item">
-              <h3 class="feature-title link">Планирование</h3>
-              <p class="feature-descr">
-                Равным образом консультация с широким активом в значительной степени обуславливает.
-              </p>
-            </li>
-            <li class="feature-item">
-              <h3 class="feature-title link">Современные технологии</h3>
-              <p class="feature-descr">
-                Значимость этих проблем настолько очевидна, что реализация плановых заданий.
-              </p>
-            </li>
+            <div class="feature-about">
+              <li class="feature-item">
+                <h3 class="feature-title link">Внимание к деталям</h3>
+                <p class="feature-descr">
+                  Идейные соображения, а также начало повседневной работы по формированию позиции.
+                </p>
+              </li>
+              <li class="feature-item">
+                <h3 class="feature-title link">Пунктуальность</h3>
+                <p class="feature-descr">
+                  Задача организации, в особенности же рамки и место обучения кадров влечет за
+                  собой.
+                </p>
+              </li>
+              <li class="feature-item">
+                <h3 class="feature-title link">Планирование</h3>
+                <p class="feature-descr">
+                  Равным образом консультация с широким активом в значительной степени
+                  обуславливает.
+                </p>
+              </li>
+              <li class="feature-item">
+                <h3 class="feature-title link">Современные технологии</h3>
+                <p class="feature-descr">
+                  Значимость этих проблем настолько очевидна, что реализация плановых заданий.
+                </p>
+              </li>
+            </div>
           </ul>
         </div>
       </section>
 
-      <section class="info">
+      <section class="info section">
         <div class="container">
           <h2 class="info-title title">Чем мы занимаемся</h2>
 
           <ul class="info-list list">
-            <li class="info-item">
-              <img
-                src="./images/about/box1.jpg"
-                alt="верстка проекта"
-                width="370"
-                class="img link"
-              />
-            </li>
-            <li class="info-item">
-              <img
-                src="./images/about/box2.jpg"
-                alt="дизайн странички на телефоне"
-                width="370"
-                class="img link"
-              />
-            </li>
-            <li class="info-item">
-              <img
-                src="./images/about/box3.jpg"
-                alt="диаграмма цветовой гаммы"
-                width="370"
-                class="img link"
-              />
-            </li>
+            <div class="info-container">
+              <li class="info-item">
+                <img
+                  src="./images/about/box1.jpg"
+                  alt="верстка проекта"
+                  width="370"
+                  class="img link"
+                />
+              </li>
+              <li class="info-item">
+                <img
+                  src="./images/about/box2.jpg"
+                  alt="дизайн странички на телефоне"
+                  width="370"
+                  class="img link"
+                />
+              </li>
+              <li class="info-item">
+                <img
+                  src="./images/about/box3.jpg"
+                  alt="диаграмма цветовой гаммы"
+                  width="370"
+                  class="img link"
+                />
+              </li>
+            </div>
           </ul>
         </div>
       </section>
 
-      <section class="team">
+      <section class="team section">
         <div class="container">
           <h2 class="team-title title">Наша команда</h2>
           <ul class="team-list list">
-            <li class="team-item">
+            <li class="team-card">
               <img
                 src="./images/team/imgigor.jpg"
                 alt="Игорь Демьяненко дизайнер"
                 width="270"
                 class="avatar link"
               />
-              <h3 class="team-subtitle">Игорь Демьяненко</h3>
-              <p class="team-descr" lang="en">Product Designer</p>
+              <div class="team-name">
+                <h3 class="team-subtitle">Игорь Демьяненко</h3>
+                <p class="team-descr" lang="en">Product Designer</p>
+              </div>
             </li>
-            <li class="team-item">
+            <li class="team-card">
               <img
                 src="./images/team/img.jpg"
                 alt="Ольга Репина фронтенд разработчик"
                 width="270"
                 class="avatar link"
               />
-              <h3 class="team-subtitle">Ольга Репина</h3>
-              <p class="team-descr" lang="en">Frontend Developer</p>
+              <div class="team-name">
+                <h3 class="team-subtitle">Ольга Репина</h3>
+                <p class="team-descr" lang="en">Frontend Developer</p>
+              </div>
             </li>
-            <li class="team-item">
+            <li class="team-card">
               <img
                 src="./images/team/imgnikolas.jpg"
                 alt="Николай Тарасов маркетолог"
                 width="270"
                 class="avatar link"
               />
-              <h3 class="team-subtitle">Николай Тарасов</h3>
-              <p class="team-descr" lang="en">Marketing</p>
+              <div class="team-name">
+                <h3 class="team-subtitle">Николай Тарасов</h3>
+                <p class="team-descr" lang="en">Marketing</p>
+              </div>
             </li>
-            <li class="team-item">
+            <li class="team-card">
               <img
                 src="./images/team/imgmihail.jpg"
                 alt="Михаил Ермаков UI-дизайнер"
                 width="270"
                 class="avatar link"
               />
-              <h3 class="team-subtitle">Михаил Ермаков</h3>
-              <p class="team-descr" lang="en">UI Designer</p>
+              <div class="team-name">
+                <h3 class="team-subtitle">Михаил Ермаков</h3>
+                <p class="team-descr" lang="en">UI Designer</p>
+              </div>
             </li>
           </ul>
         </div>
@@ -177,25 +191,29 @@
 
     <footer class="footer">
       <div class="container">
-        <a class="footer-logo link" href="./index.html"><span class="web">Web</span>Studio</a>
+        <div class="footer-container">
+          <a class="footer-logo link" href="./index.html"><span class="web">Web</span>Studio</a>
+        </div>
 
         <address class="footer-address">
           <ul class="footer-list list">
-            <li class="footer-item">
-              <a
-                class="footer-link link foot"
-                href="http://www.google.com/maps/place"
-                target="_blank"
-                rel="noopener noreferre"
-                >г. Киев, пр-т Леси Украинки, 26</a
-              >
-            </li>
-            <li class="footer-item">
-              <a class="footer-mail link foot" href="mailto:info@example.com">info@example.com</a>
-            </li>
-            <li class="footer-item">
-              <a class="footer-phone link foot" href="tel:+380991111111">+38 099 111 11 11</a>
-            </li>
+            <div class="address-container">
+              <li class="footer-item">
+                <a
+                  class="footer-link link foot"
+                  href="http://www.google.com/maps/place"
+                  target="_blank"
+                  rel="noopener noreferre"
+                  >г. Киев, пр-т Леси Украинки, 26</a
+                >
+              </li>
+              <li class="footer-item">
+                <a class="footer-mail link foot" href="mailto:info@example.com">info@example.com</a>
+              </li>
+              <li class="footer-item">
+                <a class="footer-phone link foot" href="tel:+380991111111">+38 099 111 11 11</a>
+              </li>
+            </div>
           </ul>
         </address>
       </div>
