--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
 
     <main>
       <section class="hero-section">
-        <div class="container hero-container">
+        <div class="container">
           <h1 class="hero-title">Эффективные решения для вашего бизнеса</h1>
           <button class="hero-btn btn" type="button">Заказать услугу</button>
         </div>
@@ -191,29 +191,25 @@
 
     <footer class="footer">
       <div class="container">
-        <div class="footer-container">
-          <a class="footer-logo link" href="./index.html"><span class="web">Web</span>Studio</a>
-        </div>
+        <a class="footer-logo link" href="./index.html"><span class="web">Web</span>Studio</a>
 
         <address class="footer-address">
           <ul class="footer-list list">
-            <div class="address-container">
-              <li class="footer-item">
-                <a
-                  class="footer-link link foot"
-                  href="http://www.google.com/maps/place"
-                  target="_blank"
-                  rel="noopener noreferre"
-                  >г. Киев, пр-т Леси Украинки, 26</a
-                >
-              </li>
-              <li class="footer-item">
-                <a class="footer-mail link foot" href="mailto:info@example.com">info@example.com</a>
-              </li>
-              <li class="footer-item">
-                <a class="footer-phone link foot" href="tel:+380991111111">+38 099 111 11 11</a>
-              </li>
-            </div>
+            <li class="footer-item">
+              <a
+                class="footer-link link foot"
+                href="http://www.google.com/maps/place"
+                target="_blank"
+                rel="noopener noreferre"
+                >г. Киев, пр-т Леси Украинки, 26</a
+              >
+            </li>
+            <li class="footer-item">
+              <a class="footer-mail link foot" href="mailto:info@example.com">info@example.com</a>
+            </li>
+            <li class="footer-item">
+              <a class="footer-phone link foot" href="tel:+380991111111">+38 099 111 11 11</a>
+            </li>
           </ul>
         </address>
       </div>
