--- a/index.html
+++ b/index.html
@@ -65,34 +65,30 @@
           <!-- Скрытый заголовок-->
           <h2 class="visually-hidden">Особенности</h2>
           <ul class="feature-list list">
-            <div class="feature-about">
-              <li class="feature-item">
-                <h3 class="feature-title link">Внимание к деталям</h3>
-                <p class="feature-descr">
-                  Идейные соображения, а также начало повседневной работы по формированию позиции.
-                </p>
-              </li>
-              <li class="feature-item">
-                <h3 class="feature-title link">Пунктуальность</h3>
-                <p class="feature-descr">
-                  Задача организации, в особенности же рамки и место обучения кадров влечет за
-                  собой.
-                </p>
-              </li>
-              <li class="feature-item">
-                <h3 class="feature-title link">Планирование</h3>
-                <p class="feature-descr">
-                  Равным образом консультация с широким активом в значительной степени
-                  обуславливает.
-                </p>
-              </li>
-              <li class="feature-item">
-                <h3 class="feature-title link">Современные технологии</h3>
-                <p class="feature-descr">
-                  Значимость этих проблем настолько очевидна, что реализация плановых заданий.
-                </p>
-              </li>
-            </div>
+            <li class="feature-item">
+              <h3 class="feature-title link">Внимание к деталям</h3>
+              <p class="feature-descr">
+                Идейные соображения, а также начало повседневной работы по формированию позиции.
+              </p>
+            </li>
+            <li class="feature-item">
+              <h3 class="feature-title link">Пунктуальность</h3>
+              <p class="feature-descr">
+                Задача организации, в особенности же рамки и место обучения кадров влечет за собой.
+              </p>
+            </li>
+            <li class="feature-item">
+              <h3 class="feature-title link">Планирование</h3>
+              <p class="feature-descr">
+                Равным образом консультация с широким активом в значительной степени обуславливает.
+              </p>
+            </li>
+            <li class="feature-item">
+              <h3 class="feature-title link">Современные технологии</h3>
+              <p class="feature-descr">
+                Значимость этих проблем настолько очевидна, что реализация плановых заданий.
+              </p>
+            </li>
           </ul>
         </div>
       </section>
@@ -102,32 +98,30 @@
           <h2 class="info-title title">Чем мы занимаемся</h2>
 
           <ul class="info-list list">
-            <div class="info-container">
-              <li class="info-item">
-                <img
-                  src="./images/about/box1.jpg"
-                  alt="верстка проекта"
-                  width="370"
-                  class="img link"
-                />
-              </li>
-              <li class="info-item">
-                <img
-                  src="./images/about/box2.jpg"
-                  alt="дизайн странички на телефоне"
-                  width="370"
-                  class="img link"
-                />
-              </li>
-              <li class="info-item">
-                <img
-                  src="./images/about/box3.jpg"
-                  alt="диаграмма цветовой гаммы"
-                  width="370"
-                  class="img link"
-                />
-              </li>
-            </div>
+            <li class="info-item">
+              <img
+                src="./images/about/box1.jpg"
+                alt="верстка проекта"
+                width="370"
+                class="img link"
+              />
+            </li>
+            <li class="info-item">
+              <img
+                src="./images/about/box2.jpg"
+                alt="дизайн странички на телефоне"
+                width="370"
+                class="img link"
+              />
+            </li>
+            <li class="info-item">
+              <img
+                src="./images/about/box3.jpg"
+                alt="диаграмма цветовой гаммы"
+                width="370"
+                class="img link"
+              />
+            </li>
           </ul>
         </div>
       </section>
